[package]
name = "bevy_ghx_grid"
version = "0.3.0"
description = "Bevy plugins for 2D & 3D grids"
repository = "https://github.com/Henauxg/bevy_ghx_grid"
documentation = "https://docs.rs/bevy_ghx_grid"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "grid", "bevy"]
categories = ["game-development"]
exclude = ["assets/"]

[features]
default = ["reflect", "debug-plugin"]
# Enables some reflect derives in ghx_grid
reflect = ["ghx_grid/reflect"]
# Compiles the grid debug plugin and its systems
debug-plugin = [
    "bevy/bevy_gizmos", # Support drawing debug lines and shapes
    "bevy/bevy_render", # Rendering framework core
]

[dependencies]
ghx_grid = { version = "0.3.1", features = ["bevy"] }

# Optional dependencies

# Only enabled when the "debug-plugin" feature is enabled
bevy = { version = "0.13.0", optional = true, default-features = false, features = [
] }
