[package]
name = "bevy_ghx_grid"
version = "0.8.0"
description = "Bevy plugins for 2D & 3D grids"
repository = "https://github.com/Henauxg/bevy_ghx_grid"
documentation = "https://docs.rs/bevy_ghx_grid"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "grid", "bevy"]
categories = ["game-development"]
exclude = ["assets/"]

[features]
default = ["reflect", "debug-plugin"]
# Enables some reflect derives in ghx_grid
reflect = ["ghx_grid/reflect"]
# Enables some serde derives in ghx_grid
serde = ["ghx_grid/serde"]
# Compiles the grid debug plugin and its systems
debug-plugin = [
    "bevy/bevy_gizmos",
    "bevy/bevy_gizmos_render",
    "bevy/bevy_render",
]

[dependencies]
ghx_grid = { version = "0.8.0", features = ["bevy"] }

bevy = { version = "0.18", default-features = false, features = [] }
